<resources>
    <string name="app_name">MoneyLover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="transactions">Transactions</string>
    <string name="report">Report</string>
    <string name="planning">Planning</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="debt">Debt</string>
    <string name="other">Other</string>
    <string name="loan">Loan</string>
    <string name="income">Income</string>
    <string name="Expense">Expense</string>
    <string name="net">Net Income</string>
    <string name="open">Opening balance</string>
    <string name="end">Ending balance</string>
    <string name="Income">Income and Expense</string>
    <string name="Balance">Balance</string>
    <string name="join">Join our beta testing group</string>
    <string name="Help">Help us Translate</string>
    <string name="For">For business partnership</string>
    <string name="Follow">Follow us on Twitter</string>
    <string name="Like">Like our Facebook page</string>
    <string name="walk_through">Walkthrough</string>
    <string name="add_transaction">Add transaction</string>
    <string name="save">SAVE</string>
    <string name="dont_include_this_transaction_in_reports_such_as_overview">Dont include this transaction in reports such as Overview.</string>
    <string name="exclude_from_report">Exclude from report</string>
    <string name="version">Version 5.16.0.2021021810 by Finsify</string>
    <string name="sign_in">Sign In</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="connect_with_google">connect with google</string>
    <string name="sign_in_with_apple">sign in with apple</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="money_lover">Money Lover</string>
    <string name="new_money_lover">New to money lover</string>
    <string name="already">already using money lover</string>
    <string name="My_wallet">My Wallets</string>
    <string name="Store">Store</string>
    <string name="Categories">Categories</string>
    <string name="plan">Plan wisely with budhets, cut back on extras and start saving for your dreams.</string>
    <string name="Keep">Keep track of every penny with in-depth reports.</string>
    <string name="access">Access your wallets on all of your devices with a Money Lover account</string>
    <string name="Manage">Manage your personal finance and achieve your financial goals</string>

    <string name="add_amount">Add Amount</string>
    <string name="select_category">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="with">With</string>
    <string name="select_event">Select Event</string>
    <string name="reminder">Reminder</string>
    <string name="cash">Cash</string>
    <string name="inflow">Inflow</string>
    <string name="outflow">Outflow</string>
    <string name="view_report_for_this_period">View report for this period</string>

    <string name="travel">Travel Mode</string>
    <string name="help">Help and Support</string>
    <string name="Explore">Explore Money Lover</string>
    <string name="settings">Settings</string>
    <string name="about">About us</string>
    <string name="Tools">Tools</string>
    <string name="Debts">Debts</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="exclude_from_result">Exclude from report</string>
    <string name="enable_option_exclude">Enable option Exclude from report in Add Transaction and Edit Transaction.</string>
    <string name="details_transaction">details_transaction</string>
    <string name="show_details_transaction">Always show details transa..</string>
    <string name="notifications_tone">notifications_tone</string>
    <string name="play_sound_notifications">Play sounds for notifications</string>
    <string name="todo">TODO</string>

    <string name="budget">Budget</string>
    <string name="budget_line">This transaction is not under any budget, but it should be for a better financial management</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="note">Note</string>

    <string name="title_select_category">SELECT CATEGORY</string>
    <string name="write_note">Write Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="zero">0</string>
    <string name="saturday">Saturday</string>
    <string name="doller">$</string>

    <string name="title_select_wallet">SELECT WALLET</string>
    <string name="A_financial">A financial plan to balance your income and expenses</string>
    <string name="event">Event</string>
    <string name="create_a">Create a event to track on your spending during an actual event like travelling at weekends</string>
    <string name="creating_recurring">Create recurring transaction that will be automatically added to future</string>
    <string name="recurring_transaction">Recurring Transaction</string>
    <string name="Monitor_your">Monitor your repeatitive bills such electricity,rent Internet subscription etc</string>
    <string name="bills">Bills</string>



</resources>