<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.AboutActivity">

    <ImageView
        android:id="@+id/IvMoneyLogo"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/money_lover_image" />

    <TextView
        android:id="@+id/tvMoneyLover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/money_lover"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_25"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_40"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp_18" />

    <View
        android:id="@+id/view_FullUnderLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/dark_gray" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivwalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/walkthrough"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Tvwalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/walk_through"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivwalk" />

        <ImageView
            android:id="@+id/ivhelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/helpabout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivwalk"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/help"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Tvwalk"
            app:layout_constraintTop_toBottomOf="@id/ivhelp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view_FullUnderLine2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/llMyWallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/tvFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawableStart="@drawable/ic_baseline_facebook_24"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/Like"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
        <TextView
            android:id="@+id/tvTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawableStart="@drawable/ic_twitter"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/Follow"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawableStart="@drawable/ic_google_plus"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/join"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawableStart="@drawable/ic_baseline_g_translate_24"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/Help"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:drawableStart="@drawable/ic_gmail"
            android:drawablePadding="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:text="@string/For"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />


    </LinearLayout>


</LinearLayout>