<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_orange"
    tools:context=".views.login_page.LoginFragment4">


    <ImageView
        android:id="@+id/IvMoneyLogo"
        android:layout_width="@dimen/dp_250"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/dp_250"
        android:layout_gravity="center"
        android:src="@drawable/tabpage4" />
    <TextView
        android:id="@+id/tvManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:gravity="center_horizontal"
        android:text="@string/plan"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />
    <Button
        android:id="@+id/btnMoneyLoverLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_login_button"
        android:text="@string/new_money_lover"
        android:textColor="@color/dark_orange"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLoginAlreadyExists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/rectangle_button4"
        android:text="@string/already"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>